<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Point of Sale System</string>
    <string name="splash_text">Point of Sale System</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholderName">Declan Thonre</string>
    <string name="placeholderAddress">123 Fake Street,<br></br>Upper Road,<br></br>Dublin</string>
    <string name="placeholderMobile">089 215 2121</string>
    <string name="placeholderEircode">A96 K4D8</string>
    <string name="placeholderWebsite">Gary\'s Gourmet Pizza Website</string>
    <string name="placeholderCost">47.50</string>
    <string name="main_menu_text">Main Menu</string>
    <string name="customers_text">Customers</string>
    <string name="place_order_text">Place Order</string>
    <string name="current_orders_text">Current Orders</string>
    <string name="management_text">Management</string>
    <string name="tv_user_id">tv_user_id</string>
    <string name="customer_quick_instructions">Add a Customer for the Order</string>
    <string name="text_customer_name_hint">Enter a Name</string>
    <string name="text_customer_number_hint">Enter a Number</string>
    <string name="text_customer_eircode_hint">Enter a postcode</string>
    <string name="text_customer_address_hint">Enter Address Line 1 <br></br>Enter Address Line 2</string>
    <string name="add_quick_order">Add to Order</string>
    <string name="delivery_charge_instructions">Choose a Delivery Charge</string>
    <string name="two_euro">€2</string>
    <string name="two_euro_fifty">€2.50</string>
    <string name="three_euro">€3</string>
    <string name="three_euro_fifty">€3.50</string>
    <string name="complete_delivery_charge">Complete Delivery Charge</string>
    <string name="placeholder_number">20</string>
    <string name="log_hint">User ID</string>
    <string name="log_hint_2">Password</string>
    <string name="login_button">Login</string>
    <string name="logout_button">Logout</string>
    <string name="login_no_account">Don\'t have an Account?</string>
    <string name="login_account">Do have an Account?</string>
    <string name="register_pointer">Register</string>
    <string name="total_sales_button">View Total Sales</string>
    <string name="individual_sales_button">View Individual Sales</string>
    <string name="open_food_instructions">Add an Open Food Charge</string>
    <string name="open_food_description">Add an Open Food Charge</string>
    <string name="open_food_hint">Details of the Open Food</string>
    <string name="euro_sign">€</string>
    <string name="open_food_charge">Complete<br></br>Open Food<br></br>Charge</string>
    <string name="select_customer_button">Select<br></br>Customer</string>
    <string name="payment_method_instructions">Choose a Payment Method</string>
    <string name="cash">Cash</string>
    <string name="amount_due">Amount Due:</string>
    <string name="cash_given">Cash Given</string>
    <string name="change_due">Change Due:</string>
    <string name="just_eat">Just Eat</string>
    <string name="deliveroo">Deliveroo</string>
    <string name="order_type_instructions">Choose an Order Type</string>
    <string name="visa_payment">Visa Payment</string>
    <string name="order_type">Collection or Delivery?</string>
    <string name="delivery">Delivery</string>
    <string name="collection">Collection</string>
    <string name="complete_payment">Complete Payment</string>
    <string name="_0">0</string>
    <string name="pizza_name">Pizza Name</string>
    <string name="size">Size -</string>
    <string name="price">Price - €</string>
    <string name="size_one">10 inch</string>
    <string name="size_two">12 inch</string>
    <string name="topping_note">Topping/Note</string>
    <string name="additional_topping">Additional Topping</string>
    <string name="premium_topping">Premium Topping</string>
    <string name="pizza_complete_button">Complete Pizza</string>
    <string name="bbq_chicken_wings">BBQ Chicken Wings</string>
    <string name="side_order_complete_button">Complete Side Order</string>
    <string name="print_sales_today_button">Print Sales Today</string>
    <string name="percentages_button">Percentages</string>
    <string name="total_sales_sheet_button">Total Sales Sheet</string>
    <string name="individual_sales_sheet_button">Individual Items Sales Sheet</string>
    <string name="sales_today_view">Sales Today</string>
    <string name="sales_month_view">Sales Last Month</string>
    <string name="sales_year_view">Sales Last Year</string>
    <string name="placeholder_date">19/01/2021</string>
    <string name="cash_sales_view">Cash Sales</string>
    <string name="gary_s_gourmet_pizza_website_sales_view">Gary\'s Gourmet Pizza Website Sales</string>
    <string name="just_eat_sales_view">Just Eat Sales</string>
    <string name="deliveroo_sales_view">Deliveroo Sales</string>
    <string name="visa_sales_view">Visa Sales</string>
    <string name="total_sales_view">Total Sales</string>
    <string name="_12">12</string>
    <string name="inch">inch</string>
    <string name="placeholder_additional_info">Take and Bake Quality Pizza Making at</string>
    <string name="placeholder_topping">Aubergine</string>
    <string name="placeholder_topping_2">Smoked Applewood</string>
    <string name="placeholder_topping_3">Semi Dried Tomatos</string>
    <string name="add_customer_instructions">Add a Customer</string>
    <string name="name_hint">Name</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="eircode_hint">Eircode</string>
    <string name="add_button">Add</string>
    <string name="add_customer_button">Add Customer</string>
    <string name="update_customer_instructions">Update, Delete or Choose a Customer for an Order</string>
    <string name="update_customer_button">Update Customer</string>
    <string name="delete_customer_button">Delete Customer</string>
    <string name="pick_customer_button">Pick Customer</string>
    <string name="four_fifty">4.5</string>
    <string name="_14_5">14.5</string>
    <string name="delivery_charge_button">Delivery<br></br>Charge</string>
    <string name="open_food_item_button">Open Food Item</string>
    <string name="cancel_order_button">Cancel Order</string>
    <string name="classic_pizzas_view">Classic Pizzas</string>
    <string name="margherita_pizza">Margherita Pizza</string>
    <string name="american_pizza">American Pizza</string>
    <string name="hawaiian_pizza">Hawaiian Pizza</string>
    <string name="romana_pizza">Romana Pizza</string>
    <string name="_4_cheese_pizza">4 Cheese Pizza</string>
    <string name="pollo_pizza">Pollo Pizza</string>
    <string name="melanzana_pizza">Melanzana Pizza</string>
    <string name="veg_pizza">Veg Pizza</string>
    <string name="calzone_prosciutto">Calzone Prosciutto</string>
    <string name="calzone_veggie">Calzone Veggie</string>
    <string name="gourmet_pizzas">Gourmet Pizzas</string>
    <string name="sorrento_pizza">Sorrento Pizza</string>
    <string name="dylan_s_park_pizza">Dylan\'s Park Pizza</string>
    <string name="coliemore_harbour_pizza">Coliemore Harbour Pizza</string>
    <string name="bullock_harbour_pizza">Bullock Harbour Pizza</string>
    <string name="_40_foot_pizza">40 Foot Pizza</string>
    <string name="cat_s_ladder_pizza">Cat\'s Ladder Pizza</string>
    <string name="killiney_hill_pizza">Killiney Hill Pizza</string>
    <string name="killiney_beach_pizza">Killiney Beach Pizza</string>
    <string name="the_castle_pizza">The Castle Pizza</string>
    <string name="martello_tower_pizza">Martello Tower Pizza</string>
    <string name="loreto_pizza">Loreto Pizza</string>
    <string name="vico_pizza">Vico Pizza</string>
    <string name="hyde_park_pizza">Hyde Park Pizza</string>
    <string name="quarry_pizza">Quarry Pizza</string>
    <string name="white_rock">White Rock</string>
    <string name="complete_order">Complete Order</string>
    <string name="total_price">Total Price: €</string>
    <string name="side_orders_and_salads_view">Side Orders and Salads</string>
    <string name="potato_wedges">Potato Wedges</string>
    <string name="wedges_price">4.00</string>
    <string name="garlic_roasted_prawn">Garlic Roasted Prawn</string>
    <string name="prawns_price">9.40</string>
    <string name="mexican_guacamole">Mexican<br></br>Guacamole</string>
    <string name="mex_guac_price">6.50</string>
    <string name="sweet_potato_fries">Sweet<br></br>Potato Fries</string>
    <string name="sp_price">4.50</string>
    <string name="banoffee_fudge">Banoffee Fudge</string>
    <string name="banoffee_fudge_price">5.50</string>
    <string name="dough_balls">Dough Balls</string>
    <string name="dough_balls_price">3.50</string>
    <string name="focaccia_rosemary">Focaccia<br></br>Rosemary</string>
    <string name="focaccia_r_price">6.00</string>
    <string name="focaccia_sweet_chilli">Focaccia<br></br>Sweet Chilli</string>
    <string name="pesto_bread">Pesto Bread</string>
    <string name="garden_salad">Garden Salad</string>
    <string name="garden_salad_price">6.20</string>
    <string name="chicken_bacon_salad">Chicken Bacon Salad</string>
    <string name="chicken_bacon_price">9.00</string>
    <string name="mozzarella_tomato_salad">Mozzarella Tomato<br></br>Salad</string>
    <string name="spinach_mango_avocado_salad">Spinach Mango<br></br>Avocado Salad</string>
    <string name="spinach_mango_price">7.00</string>
    <string name="rocket_parmesan_salad">Rocket Parmesan<br></br>Salad</string>
    <string name="rocket_parmesan_salad_price">4.50</string>
    <string name="dips_and_drinks">Dips and Drinks</string>
    <string name="garlic_ranch_dip">Garlic/Ranch Dip</string>
    <string name="dip_price">0.90</string>
    <string name="pesto_dip">Pesto Dip</string>
    <string name="sweet_chilli_dip">Sweet Chilli Dip</string>
    <string name="garlic_butter_ndip">Garlic Butter<br></br>Dip</string>
    <string name="bbq_dip">BBQ Dip</string>
    <string name="drink_price">1.50</string>
    <string name="coke">Coke</string>
    <string name="diet_coke">Diet Coke</string>
    <string name="coke_zero">Coke Zero</string>
    <string name="_7up">7UP</string>
    <string name="club_orange">Club Orange</string>
    <string name="san_pelegrino_nred">San Pelegrino<br></br>Red</string>
    <string name="san_pel_price">1.60</string>
    <string name="san_pellegrino_lemon">San Pellegrino Lemon</string>
    <string name="san_pellegrino_orange">San Pellegrino Orange</string>
    <string name="still_water">Still Water</string>
    <string name="sparkling_water">Sparkling Water</string>
    <string name="delete">Delete</string>

</resources>