<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainBody.dashboard.ordersActivites.PaymentActivity">

    <TextView
        android:id="@+id/paymentInstructions"
        android:layout_width="317dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:ems="15"
        android:text="@string/payment_method_instructions"
        android:textColor="@color/shopColour"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/paymentType"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:ems="15"
        android:text="@string/cash"
        android:gravity="center"
        android:textColor="@color/logoYellow"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentInstructions" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/amountDueButton"
        android:layout_width="221dp"
        android:layout_height="71dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="388dp"
        android:background="@drawable/pizaa_button3"
        android:tag="@string/cash"
        android:text="@string/amount_due"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/moneyEntry"
        app:layout_constraintEnd_toStartOf="@+id/justEatView"
        app:layout_constraintTop_toBottomOf="@+id/paymentInstructions"
        app:layout_constraintVertical_bias="0.285" />

    <TextView
        android:id="@+id/paymentMoneySymbol"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginBottom="76dp"
        android:ems="15"
        android:text="@string/euro_sign"
        android:tag="Cash"
        android:textColor="@color/shopColour"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/amountReturnButton"
        app:layout_constraintEnd_toStartOf="@+id/moneyEntry"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/moneyEntry"
        android:layout_width="249dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/shopColour"
        android:ems="15"
        android:hint="@string/cash_given"
        android:inputType="text"
        android:text="@string/_0"
        android:textColor="@color/shopColour"
        android:textColorHint="@color/logoYellow"
        android:textCursorDrawable="@color/logoYellow"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/garysView"
        app:layout_constraintEnd_toStartOf="@+id/justEatView"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/amountReturnButton"
        android:layout_width="221dp"
        android:layout_height="71dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="244dp"
        android:background="@drawable/pizaa_button3"
        android:tag="@string/cash"
        android:text="@string/change_due"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/garysView"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moneyEntry" />

    <ImageView
        android:id="@+id/justEatView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="80dp"
        android:tag="@string/just_eat"
        app:layout_constraintEnd_toStartOf="@+id/deliverooView"
        app:layout_constraintTop_toBottomOf="@+id/paymentInstructions"
        app:srcCompat="@drawable/just_eat_logo" />

    <ImageView
        android:id="@+id/deliverooView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="44dp"
        android:tag="@string/deliveroo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentInstructions"
        app:srcCompat="@drawable/deliveroo_logo" />

    <ImageView
        android:id="@+id/garysView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:tag="@string/placeholderWebsite"
        app:layout_constraintEnd_toStartOf="@+id/visaView"
        app:layout_constraintTop_toBottomOf="@+id/justEatView"
        app:srcCompat="@drawable/garrylogo" />

    <ImageView
        android:id="@+id/visaView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="44dp"
        android:tag="@string/visa_payment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deliverooView"
        app:srcCompat="@drawable/visa_mastercard_logo" />

    <TextView
        android:id="@+id/orderTypeInstructions"
        android:layout_width="317dp"
        android:layout_height="45dp"
        android:layout_marginTop="424dp"
        android:ems="15"
        android:text="@string/order_type_instructions"
        android:textColor="@color/shopColour"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentType" />

    <TextView
        android:id="@+id/orderMethodType"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginBottom="32dp"
        android:ems="15"
        android:gravity="center"
        android:text="@string/order_type"
        android:textColor="@color/logoYellow"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/delivery_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderTypeInstructions"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/delivery_btn"
        android:layout_width="178dp"
        android:layout_height="62dp"
        android:layout_marginStart="384dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/pizaa_button2"
        android:text="@string/delivery"
        android:tag="@string/delivery"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/completePayment_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/collection_btn"
        android:layout_width="178dp"
        android:layout_height="62dp"
        android:layout_marginEnd="468dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/pizaa_button2"
        android:text="@string/collection"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:tag="@string/collection"
        app:layout_constraintBottom_toTopOf="@+id/completePayment_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/delivery_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/completePayment_btn"
        android:layout_width="247dp"
        android:layout_height="84dp"
        android:layout_marginEnd="552dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/pizza_button3"
        android:text="@string/complete_payment"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nestedScrollView"
        app:layout_constraintTop_toBottomOf="@+id/orderTypeInstructions"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>