<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardViewItem1"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:layout_margin="4dp"
    app:cardElevation="10dp"
    app:cardCornerRadius="8dp"
    app:cardPreventCornerOverlap="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <TextView
            android:id="@+id/productNameView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:text="@string/coliemore_harbour_pizza"
            android:textColor="@color/shopColour"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/productQuantityView4"
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/productPriceView4"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="2dp"
            android:layout_toEndOf="@+id/productNameView4"
            android:text="@string/_12"
            android:textColor="@color/logoYellow"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/productQuantitySizeView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/productQuantityView4"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="1dp"
            android:layout_toEndOf="@+id/productQuantityView4"
            android:text="@string/inch"
            android:textColor="@color/logoYellow"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/productQuantityCostView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="2dp"
            android:layout_toEndOf="@+id/productQuantitySizeView4"
            android:text="@string/euro_sign"
            android:textColor="@color/logoYellow"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/productPriceView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/productQuantityCostView4"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="2dp"
            android:layout_toEndOf="@+id/productQuantityCostView4"
            android:text="@string/placeholderCost"
            android:textColor="@color/logoYellow"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/topping1View4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productNameView4"
            android:layout_alignStart="@+id/productNameView4"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/placeholder_additional_info"
            android:textColor="@color/logoYellow"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/topping2View4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topping1View4"
            android:layout_alignStart="@+id/topping1View4"
            android:layout_marginStart="0dp"
            android:layout_marginTop="12dp"
            android:text="@string/placeholder_topping"
            android:textColor="@color/logoYellow"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/topping3View4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topping2View4"
            android:layout_alignStart="@+id/topping2View4"
            android:layout_marginStart="0dp"
            android:layout_marginTop="12dp"
            android:text="@string/placeholder_topping_2"
            android:textColor="@color/logoYellow"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/topping4View4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topping3View4"
            android:layout_alignStart="@+id/topping3View4"
            android:layout_marginStart="0dp"
            android:layout_marginTop="12dp"
            android:text="@string/placeholder_topping_3"
            android:textColor="@color/logoYellow"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>
