<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardViewItem1"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:layout_margin="4dp"
    app:cardElevation="10dp"
    app:cardCornerRadius="8dp"
    app:cardPreventCornerOverlap="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <TextView
            android:id="@+id/deliveryView"
            android:layout_width="243dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="2dp"
            android:text="@string/delivery"
            android:textColor="@color/shopColour"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/euroView"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_alignEnd="@+id/deliveryView"
            android:layout_marginStart="66dp"
            android:layout_marginLeft="6dp"
            android:layout_marginEnd="-67dp"
            android:layout_marginBottom="2dp"
            android:layout_toEndOf="@+id/openFoodView"
            android:text="@string/euro_sign"
            android:textColor="@color/logoYellow"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/deliveryPriceView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/euroView"
            android:layout_alignBottom="@+id/euroView"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="16dp"
            android:text="@string/two_euro_fifty"
            android:textColor="@color/logoYellow"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>
